--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,18 @@
 </head>
 <body>
 
+<% flash.each do |name, msg| -%>
+  <%= content_tag :div, msg, :id => "flash#{name}" %>
+<% end -%>
+
+<div class="user-navi">
+  <% if current_user -%>
+    Logged in as <%= current_user.screen_name %>
+  <% else -%>
+    <%= link_to 'Log in', '/auth/twitter' %>
+  <% end -%>
+</div>
+
 <%= yield %>
 
 </body>
